# padic_number_theory

./: CMakeLists.txt  README.md  main.c  padic.cpp  padic.hpp  test.cpp
